<resources>
    <string name="app_name">BottomNavigationApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HOME">Home</string>
    <string name="SEARCH">Search</string>
    <string name="UTILITIES">Utilities</string>
    <string name="CONTACT">Contact</string>
    <string name="MY_PROFILE">My Profile</string>
</resources>